Fix configuration and status codes in the MIT plugin
Modify the MIT plugin to support [appdefaults] configuration in
addition to the dictionary path configured in the KDC.  Modify the
core code to return meaningful error codes instead of just 0 and 1,
adjust the Heimdal module accordingly to translate them into 0 and
1, and use that to allow the MIT code to return real error codes.

In order to support this, import more of the Kerberos portability
layer including new portability for kadmin headers.

--- a/TODO
+++ b/TODO
@@ -7,3 +7,6 @@
  * Feed back modifications to CrackLib 2 to allow a program to use a
    custom set of rules, which would allow us to stop embedding our own
    copy of CrackLib customized to add additional rules.
+
+ * Pass the default realm into krb5_appdefault_string when getting
+   defaults for the MIT Kerberos plugin.
