Remove some reachable leaks, static data in cracklib, tests
Don't attempt an optimization where we keep the last block of
the dictionary in memory to answer questions, since each call
may use a different dictionary.  Close the password dictionary
after each lookup (although this doesn't recover all of the
memory due to more static data elsewhere).

Free more memory at the end of the MIT plugin test.

--- a/cracklib/HISTORY
+++ b/cracklib/HISTORY
@@ -17,6 +17,8 @@ following modifications have been made:
  * Increase MINLENGTH.
  * Add a check for a duplicated dictionary word.
  * Changed error for very short passwords to match current CrackLib.
+ * Remove last block optimization in GetPW and start fresh each time.
+ * Close the dictionary after each password lookup.
 
 Below is the original changelog for CrackLib:
 
