Hide internal functions
Mark all the internal plugin functions and all the CrackLib functions
as hidden.

--- a/cracklib/HISTORY
+++ b/cracklib/HISTORY
@@ -19,6 +19,7 @@ following modifications have been made:
  * Changed error for very short passwords to match current CrackLib.
  * Remove last block optimization in GetPW and start fresh each time.
  * Close the dictionary after each password lookup.
+ * Set hidden visibility on all CrackLib symbols.
 
 Below is the original changelog for CrackLib:
 
