--- a/README
+++ b/README
@@ -324,6 +324,7 @@ CONFIGURATION
       additional complexity.
 
   You can omit any dictionary setting and only use the above settings, in
-  which case only the above checks and no dictionary checks will be
-  performed.  (But for that simple style of password strength checking,
-  there are probably better strength checking plugins already available.)
+  which case only the above checks and checks for passwords based on the
+  principal will be done, bypassing any dictionary check.  (But for that
+  simple style of password strength checking, there are probably better
+  strength checking plugins already available.)
