--- a/tools/heimdal-strength.pod
+++ b/tools/heimdal-strength.pod
@@ -57,4 +57,14 @@ krb5-strength package.
 
 Russ Allbery <rra@stanford.edu>
 
+=head1 COPYRIGHT AND LICENSE
+
+Copyright 2010, 2013 The Board of Trustees of the Leland Stanford Junior
+University
+
+Copying and distribution of this file, with or without modification, are
+permitted in any medium without royalty provided the copyright notice and
+this notice are preserved.  This file is offered as-is, without any
+warranty.
+
 =cut
