--- a/README
+++ b/README
@@ -361,7 +361,7 @@ LICENSE
   The krb5-strength package as a whole is covered by the following
   copyright statement and license:
 
-    Copyright 2013
+    Copyright 2006, 2007, 2009, 2010, 2012, 2013
         The Board of Trustees of the Leland Stanford Junior University
 
     Permission is hereby granted, free of charge, to any person obtaining
@@ -385,7 +385,7 @@ LICENSE
 
   The embedded version of CrackLib (all files in the cracklib
   subdirectory) is covered by the Artistic license.  See the file
-  cracklib/LICENSE for more information.  Combined derivative works that
+  cracklib/LICENCE for more information.  Combined derivative works that
   include this code, such as binaries built with the embedded CrackLib,
   will need to follow the terms of the Artistic license as well as the
   above license.
